data/derived/sp14/progs/unify/prog4449.ml.out
Characters 157-177:
  | y :: t -> if x = y then  palindromeHelper s t
                             ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         unit
